tests/NormalTests/paczka1/fuzzy1/51555019.err
Error in line 7: GgWe A631 35,3
Error in line 15: A631 A764 77,1
Error in line 14: XxR A631 63,5
Error in line 12: xMStl4n A631 37,6
Error in line 25: A631 A68 -1,5
Error in line 23: xMStl4n A68 51,2
Error in line 18: GgWe S987 0,9
Error in line 17: A631 A68 47,5
Error in line 34: y54 S987 50,9
